fix pagination in dashboard
